manifest/k8s-production/namespaces/ingress-nginx/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ExternalName
  externalName: product.core.svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  labels:
    name: product
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: product.jagodevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product
            port: 
              number: 80
